--- a/fe/src/index.css
+++ b/fe/src/index.css
@@ -11,3 +11,30 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* Layout */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, sans-serif;
+  text-decoration: none;
+}
+
+.container-box {
+  display: flex;
+  justify-content: center;
+}
+
+.box-1200px {
+  width: 1200px;
+  margin: 0 auto;
+}
+
+.bg-cam {
+  background-color: #ff9900;
+}
+
+.bg-xanh {
+  background-color: #146eb4;
+}
