--- a/fe/src/Components/Header/Header.module.css
+++ b/fe/src/Components/Header/Header.module.css
@@ -35,7 +35,7 @@
     align-items: center;
 }
 
-.menu a {
+.menu .categoryLink {
     text-decoration: none;
     font-weight: 600;
     font-size: 14px;
@@ -44,12 +44,12 @@
 
 .categoryMenu {
     background-color: #0d3b66;
-    padding: 12px 18px;
+    padding: 12px 34px;
     border-radius: 2px;
 }
 
 .categoryMenu a {
-    color: #fff !important;
+    /* color: #fff; */
     display: flex;
     align-items: center;
     gap: 8px;
@@ -59,8 +59,7 @@
     font-size: 16px;
 }
 
-.cartBtn {
-}
+.cartBtn {}
 
 /* Khi scroll xuống */
 .sticky {
@@ -70,4 +69,116 @@
     right: 0;
     z-index: 1000;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.categoryMenu {
+    position: relative;
+    display: inline-block;
+}
+
+.categoryLink {
+    color: black;
+    text-decoration: none;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+
+/* Dropdown cha */
+.dropdownMenu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #fff;
+    border-radius: 4px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+    font-size: 14px;
+    width: 260px;
+    display: flex;
+    flex-direction: column;
+    z-index: 1000;
+    animation: fadeIn 0.2s ease-in-out;
+}
+
+/* Mỗi mục cha */
+.dropdownItem {
+    position: relative;
+    width: 100%;
+}
+
+.dropdownItem>span {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 16px;
+    color: #333;
+    font-weight: 500;
+    cursor: pointer;
+    transition: all 0.2s ease;
+}
+
+.dropdownItem>span:hover {
+    background-color: #ff6600;
+    color: #fff;
+}
+
+.arrowIcon {
+    font-size: 12px;
+    color: #aaa;
+    transition: transform 0.2s ease, color 0.2s ease;
+}
+
+.dropdownItem>span:hover .arrowIcon {
+    transform: translateX(3px);
+    color: #fff;
+}
+
+.subMenu {
+    position: absolute;
+    top: 0;
+    left: 100%;
+    background: #fff;
+    border-radius: 0 4px 4px 0;
+    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
+    width: 940px;
+    padding: 10px 20px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    column-gap: 20px;
+    row-gap: 6px;
+    height: 300px;
+    overflow-y: auto;
+    z-index: 2000;
+    opacity: 0;
+    visibility: hidden;
+    transform: translateX(40px);
+    transition: all 0.2s linear;
+}
+
+.dropdownItem:hover .subMenu {
+    opacity: 1;
+    visibility: visible;
+    transform: translateX(0);
+}
+
+/* Item bên trong submenu */
+.subMenuLink {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 8px 12px;
+    color: #333;
+    font-size: 14px;
+    text-decoration: none;
+    width: 280px;
+    box-sizing: border-box;
+    transition: all 0.2s ease;
+}
+
+.subMenuLink:hover {
+    background-color: #f5f5f5;
+    color: #00796b;
 }
