--- a/fe/src/Components/CarouselProduct/carouselProduct.css
+++ b/fe/src/Components/CarouselProduct/carouselProduct.css
@@ -15,9 +15,9 @@
 }
 
 /* Equal height card */
-.product-card {
+.card-product {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-height: 320px;
+  min-height: 300px;
 }
