--- a/fe/src/Page/About/About.css
+++ b/fe/src/Page/About/About.css
@@ -70,3 +70,21 @@
     color: #1677ff;
     margin-bottom: 10px;
 }
+
+.img-hover-box {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    border-radius: 8px;
+}
+
+.img-hover {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.4s ease;
+}
+
+.img-hover-box:hover .img-hover {
+    transform: scale(1.1);
+}
